FullQa New/src/objects/ContractItem__c.object
<CustomObject>
    <description>The products a customer has purchased</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account the Contract Items are associated with.</description>
        <inlineHelpText>The Account the Contract Items are associated with.</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contract_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateAddedtoContract__c</fullName>
        <description>The date that the item was added to the contract.</description>
        <inlineHelpText>The date that the item was added to the contract.</inlineHelpText>
        <label>Date Added to Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ItemStopDate__c</fullName>
        <description>This is the date that the item expires on the contract (through customer cancellation or decision not to renew)</description>
        <inlineHelpText>This is the date that the item expires on the contract (through customer cancellation or decision not to renew)</inlineHelpText>
        <label>Item Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>The product family that this contract item belongs to.</description>
        <inlineHelpText>The product family that this contract item belongs to.</inlineHelpText>
        <label>ProductFamily</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AvaTax</fullName>
                </value>
                <value>
                    <fullName>AvaFile</fullName>
                </value>
                <value>
                    <fullName>AvaTax OnSite</fullName>
                </value>
                <value>
                    <fullName>vCert</fullName>
                </value>
                <value>
                    <fullName>vReturn</fullName>
                </value>
                <value>
                    <fullName>Tax Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TenSoftContractNumber__c</fullName>
        <description>The TenSoift Contract number</description>
        <inlineHelpText>The TenSoft Contract number</inlineHelpText>
        <label>TenSoft Contract Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>(Deprecated) Contract Item</label>
    <nameField>
        <label>SKU</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>